--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -14,7 +14,14 @@ border-bottom: 1px solid #E0752F;
 opacity: 1;
 
 }
-
+.navbar {
+    background-color: transparent; /* Fondo transparente por defecto */
+    transition: background-color 0.3s; /* Agrega una transición suave para el cambio de color de fondo */
+  }
+  
+  .navbar.scrolled {
+    background-color: #333; /* Cambia el color de fondo cuando se ha desplazado hacia abajo */
+  }
 .me-auto {
     margin-right: 0!important;}
 
